Added support for mp4 output

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@
 custom/Bertrand_Lee
 custom/Riley_Kwok
 .ipynb_checkpoints
+videos/retail_video1.mov
+videos/retail_video2.mov
+movie.gif
+newvideoname.mp4
+temp.bmp
+temp.jpg
+
